--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,11 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="transparent">#00000000</color>
+    <color name="agate">#2a34c4</color>
+    <color name="bloodstone">#e31a1a</color>
+    <color name="cobalt">#e9e9e9</color>
+    <color name="azurite">#2e4800</color>
+    <color name="opal">#ffe399</color>
+
 </resources>
