--- a/app/src/main/res/layout/loginview.xml
+++ b/app/src/main/res/layout/loginview.xml
@@ -7,50 +7,141 @@
     android:paddingLeft="4dp"
     android:paddingRight="4dp"
     android:paddingTop="3dp"
+    android:background="@drawable/hostelback"
     android:id="@+id/loginview"
+
+    android:layout_weight="4"
     xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <EditText
-        android:id="@+id/et_login_username"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="USERNAME" />
-
-    <EditText
-        android:id="@+id/et_login_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="PASSWORD" />
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/btn_login_login"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="4dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:weightSum="2"
+        android:orientation="vertical"
+        android:background="@color/transparent">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
             android:layout_weight="1"
-            android:text="Login" />
-
-        <Button
-            android:id="@+id/btn_login_clear"
+            android:layout_margin="40dp"
+            android:src="@drawable/aaveglogowhite"/>
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
+            android:layout_height="0dp"
             android:layout_weight="1"
-            android:text="Clear" />
+            android:id="@+id/loginBanner"
+            android:layout_marginRight="200dp"
+            >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="start"
+                android:text="LOGIN"
+                android:textColor="#000"
+                android:textSize="36sp" />
+
+        </androidx.cardview.widget.CardView>
     </LinearLayout>
 
-    
 
-    <ProgressBar
-        android:id="@+id/progress_login"
+
+        <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp" />
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:layout_weight="2.5">
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                android:backgroundTint="@color/darktransparent">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:weightSum="3"
+                    android:background="@color/transparent">
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.5"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:orientation="vertical"
+                    android:layout_weight="1.5"
+                    android:background="@color/transparent">
+                    <EditText
+                        android:id="@+id/et_login_username"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                      android:layout_margin="10dp"
+                        android:layout_gravity="center"
+                        android:gravity="center_vertical"
+                        android:textSize="18sp"
+                        android:textColor="#FFF"
+                        android:textStyle="italic"
+                        android:textColorHint="@color/whitetransparent"
+                        android:backgroundTint="@color/whitetransparent"
+                        android:hint="Enter your webmail USER ID" />
+
+                    <EditText
+                        android:id="@+id/et_login_password"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:inputType="textPassword"
+                        android:layout_margin="10dp"
+                        android:layout_gravity="center"
+                        android:gravity="center_vertical"
+                        android:textSize="18sp"
+                        android:textStyle="italic"
+                        android:textColorHint="@color/whitetransparent"
+                        android:backgroundTint="@color/whitetransparent"
+                        android:hint="Enter your Webmail Password"/>
+
+
+                    <Button
+                        android:id="@+id/btn_login_login"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:background="@drawable/buttoncustom"
+                        android:textColor="#000"
+                        android:textSize="18sp"
+                        android:text="Login" />
+                    <ProgressBar
+                        android:id="@+id/progress_login"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="40dp" />
+                </LinearLayout>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.5"/>
+
+                </LinearLayout>
+
+
+
+            </androidx.cardview.widget.CardView>
+
+
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.5"/>
+
+
+
 
 
 </LinearLayout>
