--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,8 +1,54 @@
-<FrameLayout android:layout_width="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/hostel_chooser"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@drawable/splash_bg_compressed">
 
-    </FrameLayout>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:src="@drawable/explosion_compressed"
+        android:scaleType="fitXY"
+        app:layout_constraintHeight_percent="0.717"
+        >
+    </ImageView>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:src="@drawable/buildings_compressed"
+        android:scaleType="fitXY"
+        app:layout_constraintHeight_percent="0.417"
+        >
+    </ImageView>
+
+    <ImageView
+        android:layout_width="120dp"
+        android:layout_height="60dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="32dp"
+        android:src="@drawable/logo_compressed"
+        >
+    </ImageView>
+
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        app:layout_constraintStart_toEndOf="parent"
+        app:layout_constraintWidth_percent="0.3"
+        android:text="@string/login_text"
+        android:textSize="30sp"
+        >
+
+    </TextView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
