--- a/app/src/main/res/layout/standings_list.xml
+++ b/app/src/main/res/layout/standings_list.xml
@@ -35,6 +35,7 @@
                 android:text="0"
                 android:layout_gravity="center_vertical"
                 android:textSize="20dp"
+                android:layout_marginRight="16dp"
                 android:gravity="right"/>
 
 
