--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,7 @@
     <color name="events_header_bg">#c46210</color>
     <color name="events_bg">#292B2C</color>
     <color name="black">#000000</color>
+    <color name="gray_underline">#42464E</color>
     <color name="gray_border_color">#454D55</color>
     <color name="gray_1">#343A40</color>
     <color name="gray_2">#555D65</color>
