--- a/app/src/main/res/drawable/gray_bottom.xml
+++ b/app/src/main/res/drawable/gray_bottom.xml
@@ -12,7 +12,7 @@
             <solid android:color="@android:color/transparent" />
             <stroke
                 android:width="0.5dp"
-                android:color="@color/black" />
+                android:color="@color/gray_underline" />
         </shape>
     </item>
 
