--- a/app/src/main/res/layout/event_adapter_layout.xml
+++ b/app/src/main/res/layout/event_adapter_layout.xml
@@ -2,21 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="7dp"
-    android:paddingBottom="7dp"
-    android:paddingStart="15dp"
-    android:paddingEnd="15dp"
     android:background="@drawable/gray_bottom"
-    android:gravity="center"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingStart="15dp"
+    android:paddingTop="9dp"
+    android:paddingEnd="15dp"
+    android:paddingBottom="9dp">
 
     <TextView
         android:id="@+id/event_title"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
+        android:fontFamily="@font/comfortaa"
+        android:gravity="center"
         android:text="Event"
-        android:textSize="17sp"
-        android:fontFamily="@font/comfortaa"/>
+        android:textColor="@color/black"
+        android:textSize="17sp" />
 
 </LinearLayout>
