--- a/app/src/main/res/layout/loginview.xml
+++ b/app/src/main/res/layout/loginview.xml
@@ -3,6 +3,7 @@
     android:id="@+id/loginview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_weight="4"
     android:background="@drawable/hostelback"
     android:gravity="center_vertical"
@@ -27,22 +28,22 @@
             android:layout_weight="1"
             android:src="@drawable/aaveglogowhite" />
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/loginBanner"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginRight="200dp"
-            android:layout_weight="1">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:id="@+id/loginBanner"
+                android:layout_marginRight="200dp"
                 android:layout_gravity="start"
                 android:text="LOGIN"
+                android:background="#FFF"
                 android:textColor="#000"
-                android:textSize="36sp" />
+                app:autoSizeTextType="uniform"
+                app:autoSizeMinTextSize="14sp"
+                app:autoSizeMaxTextSize="100sp"
+                app:autoSizeStepGranularity="2sp" />
 
-        </androidx.cardview.widget.CardView>
     </LinearLayout>
 
 
@@ -76,37 +77,44 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
+                    android:layout_gravity="center"
                     android:layout_weight="1.5"
                     android:background="@color/transparent"
                     android:orientation="vertical">
 
                     <EditText
                         android:id="@+id/et_login_username"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:layout_margin="10dp"
+                        android:layout_marginLeft="30dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginRight="30dp"
+                        android:layout_marginBottom="10dp"
                         android:backgroundTint="@color/whitetransparent"
                         android:gravity="center_vertical"
-                        android:hint="Enter your webmail USER ID"
+                        android:hint="Rollnumber"
+                        android:textAlignment="center"
                         android:textColor="#FFF"
-                        android:textColorHint="@color/whitetransparent"
-                        android:textSize="18sp"
-                        android:textStyle="italic" />
+                        android:textColorHint="@drawable/editexthint"
+                        android:textSize="18sp" />
 
                     <EditText
                         android:id="@+id/et_login_password"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:layout_margin="10dp"
+                        android:layout_marginLeft="30dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginRight="30dp"
+                        android:layout_marginBottom="10dp"
                         android:backgroundTint="@color/whitetransparent"
                         android:gravity="center_vertical"
-                        android:hint="Enter your Webmail Password"
+                        android:hint=" Password"
                         android:inputType="textPassword"
-                        android:textColorHint="@color/whitetransparent"
-                        android:textSize="18sp"
-                        android:textStyle="italic" />
+                        android:textAlignment="center"
+                        android:textColorHint="@drawable/editexthint"
+                        android:textSize="18sp" />
 
 
                     <Button
@@ -119,17 +127,17 @@
                         android:textColor="#000"
                         android:textSize="18sp" />
 
-                    <ProgressBar
-                        android:id="@+id/progress_login"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="40dp" />
                 </LinearLayout>
-
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:layout_weight="0.5" />
+                    android:layout_weight="0.3" />
+                <ProgressBar
+                    android:id="@+id/progress_login"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="0.2"
+                    android:layout_marginTop="40dp" />
 
             </LinearLayout>
 
