--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,7 @@
     <color name="light_gold">#FAEF95</color>
     <color name="light_yellow">#FAEA9A</color>
 
-    <color name="agate">#2a34c4</color>
+    <color name="agate">#580063</color>
     <color name="bloodstone">#e31a1a</color>
     <color name="cobalt">#e9e9e9</color>
     <color name="azurite">#2e4800</color>
