--- a/app/src/main/res/layout/hostel_events_card.xml
+++ b/app/src/main/res/layout/hostel_events_card.xml
@@ -1,16 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
+    android:id="@+id/hostel_events_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        app:cardBackgroundColor="@color/colorAccent"
-        app:cardCornerRadius="30dp">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="10dp">
 
-        
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/recent_events_card_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:lines="4"
+                android:textSize="30dp"
+                android:layout_centerVertical="true"
+                android:text="NOX\n2"/>
+
+        </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
 
