--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,23 +8,32 @@
     android:background="@color/colorPrimaryDark"
     >
 
-    <androidx.viewpager.widget.ViewPager
+    <Toolbar
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:id="@+id/view_pager_main_screen"
+        android:layout_height="wrap_content"
+        android:id="@+id/toolbar_main"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/tab_layout_main_screen"
+        android:background="#696969"
+        android:theme="@style/ToolBarStyle"
+        android:title="Home Fragment"
         >
-    </androidx.viewpager.widget.ViewPager>
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:text="LOG OUT"
+            >
+        </Button>
+    </Toolbar>
 
     <FrameLayout
         android:id="@+id/main_framelayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar_main"
         app:layout_constraintBottom_toTopOf="@id/tab_layout_main_screen"
         />
 
