--- a/app/src/main/res/layout/layout_single_sponsor.xml
+++ b/app/src/main/res/layout/layout_single_sponsor.xml
@@ -5,8 +5,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#FFFFFF"
-    android:layout_margin="12dp"
+    android:background="#cccccc"
+    android:layout_margin="6dp"
     >
 
     <TextView
@@ -22,8 +22,8 @@
     </TextView>
 
     <ImageView
-        android:layout_width="120dp"
-        android:layout_height="120dp"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
         android:id="@+id/iv_sponsors"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
