--- a/app/src/main/res/layout/layout_sponsors_fragment.xml
+++ b/app/src/main/res/layout/layout_sponsors_fragment.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/rv_sponsor_list"
