--- a/app/src/main/res/layout/loginview.xml
+++ b/app/src/main/res/layout/loginview.xml
@@ -1,36 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/loginview"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_weight="4"
+    android:background="@drawable/hostelback"
     android:gravity="center_vertical"
     android:orientation="vertical"
-    android:paddingBottom="3dp"
     android:paddingLeft="4dp"
-    android:paddingRight="4dp"
     android:paddingTop="3dp"
-    android:background="@drawable/hostelback"
-    android:id="@+id/loginview"
-    android:layout_weight="4"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:paddingRight="4dp"
+    android:paddingBottom="3dp">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:weightSum="2"
+        android:background="@color/transparent"
         android:orientation="vertical"
-        android:background="@color/transparent">
+        android:weightSum="2">
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_weight="1"
             android:layout_margin="40dp"
-            android:src="@drawable/aaveglogowhite"/>
+            android:layout_weight="1"
+            android:src="@drawable/aaveglogowhite" />
+
         <androidx.cardview.widget.CardView
+            android:id="@+id/loginBanner"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            android:id="@+id/loginBanner"
             android:layout_marginRight="200dp"
-            >
+            android:layout_weight="1">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -44,64 +46,67 @@
     </LinearLayout>
 
 
-
-        <LinearLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:orientation="vertical"
-        android:layout_weight="2.5">
+        android:layout_weight="2.5"
+        android:orientation="vertical">
 
-            <androidx.cardview.widget.CardView
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="20dp"
+            android:backgroundTint="@color/darktransparent">
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginLeft="10dp"
-                android:backgroundTint="@color/darktransparent">
-                <LinearLayout
+                android:background="@color/transparent"
+                android:orientation="vertical"
+                android:weightSum="3">
+
+                <View
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:weightSum="3"
-                    android:background="@color/transparent">
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="0.5"/>
+                    android:layout_height="0dp"
+                    android:layout_weight="0.5" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:orientation="vertical"
                     android:layout_weight="1.5"
-                    android:background="@color/transparent">
+                    android:background="@color/transparent"
+                    android:orientation="vertical">
+
                     <EditText
                         android:id="@+id/et_login_username"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                      android:layout_margin="10dp"
                         android:layout_gravity="center"
-                        android:gravity="center_vertical"
-                        android:textSize="18sp"
-                        android:textColor="#FFF"
-                        android:textStyle="italic"
-                        android:textColorHint="@color/whitetransparent"
+                        android:layout_margin="10dp"
                         android:backgroundTint="@color/whitetransparent"
-                        android:hint="Enter your webmail USER ID" />
+                        android:gravity="center_vertical"
+                        android:hint="Enter your webmail USER ID"
+                        android:textColor="#FFF"
+                        android:textColorHint="@color/whitetransparent"
+                        android:textSize="18sp"
+                        android:textStyle="italic" />
 
                     <EditText
                         android:id="@+id/et_login_password"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:inputType="textPassword"
-                        android:layout_margin="10dp"
                         android:layout_gravity="center"
-                        android:gravity="center_vertical"
-                        android:textSize="18sp"
-                        android:textStyle="italic"
-                        android:textColorHint="@color/whitetransparent"
+                        android:layout_margin="10dp"
                         android:backgroundTint="@color/whitetransparent"
-                        android:hint="Enter your Webmail Password"/>
+                        android:gravity="center_vertical"
+                        android:hint="Enter your Webmail Password"
+                        android:inputType="textPassword"
+                        android:textColorHint="@color/whitetransparent"
+                        android:textSize="18sp"
+                        android:textStyle="italic" />
 
 
                     <Button
@@ -110,26 +115,26 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:background="@drawable/buttoncustom"
+                        android:text="Login"
                         android:textColor="#000"
-                        android:textSize="18sp"
-                        android:text="Login" />
+                        android:textSize="18sp" />
+
                     <ProgressBar
                         android:id="@+id/progress_login"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="40dp" />
                 </LinearLayout>
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="0.5"/>
 
-                </LinearLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="0.5" />
+
+            </LinearLayout>
 
 
-
-            </androidx.cardview.widget.CardView>
-
+        </androidx.cardview.widget.CardView>
 
 
     </LinearLayout>
@@ -137,10 +142,17 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.5"/>
+        android:layout_weight="0.5" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:id="@+id/tv_made_with"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:textSize="12sp"
+        android:text="Made with♥by Delta Force &amp; Aaveg Design Team"
+        >
 
-
-
+    </TextView>
 
 </LinearLayout>
