--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,19 +15,21 @@
         android:id="@+id/toolbar_main"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="#696969"
+        android:background="@android:color/transparent"
         android:theme="@style/ToolBarStyle"
         android:title="Home Fragment"
         >
 
-        <Button
-            android:id="@+id/logout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:padding="5dp"
+            app:srcCompat="@drawable/logout"
+            android:tint="#FFFFFF"
             android:layout_gravity="end"
-            android:text="LOG OUT"
-            >
-        </Button>
+            android:scaleType="centerCrop"
+            android:id="@+id/logout" />
+
     </Toolbar>
 
     <FrameLayout
