--- a/app/src/main/res/layout/cluster_row_layout.xml
+++ b/app/src/main/res/layout/cluster_row_layout.xml
@@ -9,6 +9,7 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/cluster_image_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="6dp"
