--- a/app/src/main/res/layout/fragment_clusters.xml
+++ b/app/src/main/res/layout/fragment_clusters.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/event_header_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
