--- a/app/src/main/res/layout/fragment_event_details.xml
+++ b/app/src/main/res/layout/fragment_event_details.xml
@@ -15,6 +15,7 @@
         android:layout_marginBottom="20dp">
 
         <LinearLayout
+            android:id="@+id/event_header_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
