--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,9 +31,14 @@
     <color name="gray_1">#343A40</color>
     <color name="gray_2">#555D65</color>
     <color name="gray_3">#B9BBBE</color>
+
     <color name="scoreboard_culturals">#09bc8a</color>
     <color name="scoreboard_sports">#f49d6e</color>
     <color name="scoreboard_spectrum">#75dddd</color>
 
-
+    <color name="event_agate">#580063</color>
+    <color name="event_azurite">#2e4800</color>
+    <color name="event_bloodstone">#e31a1a</color>
+    <color name="event_cobalt">#e9e9e9</color>
+    <color name="event_opal">#ffe399</color>
 </resources>
