--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -61,8 +61,9 @@
                             <ImageView
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:src="@drawable/culturals_cup"
-                                android:foreground="#af000000"/>
+                                android:foreground="#af000000"
+                                android:scaleType="fitEnd"
+                                android:src="@drawable/culturals_cup" />
 
                             <TextView
                                 android:id="@+id/culturals_place"
